--- a/main.html
+++ b/main.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>HTML Tutorial</title>
-</head>
-<body>
-
-The content of the document......
-
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css">
+    <title>Amanda Polarolo ~ MP451 ~ Spring 2025</title>
+    <div class="stampsleft">
+      <img src="\stamps\stamp1.png">
+      <img src="\stamps\stamp2.gif">
+      <img src="\stamps\stamp3.gif">
+    </div>
+    <div class="stampsright">
+      <img src="\stamps\stamp4.png">
+      <img src="\stamps\stamp5.png">
+      <img src="\stamps\stamp6.gif">
+    </div>
+    
+    
+    <div>
+      <h2>
+        Amanda Polarolo
+      </h2>
+      <h3>
+        MP451 Spring 2025 ~ 1 Credit
+      </h3>
+    </div>
+  </head>
+  <section>
+    <h3>
+      Experiences & Contributions
+    </h3>
+    <div class="div-2">
+      <p>
+        This was my first semester with COSI and unfortuantely my last, being a senior. I contributed by attending every meeting, 
+        doing lightning talks on Neocities, [insert others...], helping with the game preservation/emulation station, and assisting 
+        in the documenting of COSIs library and magazines.
+      </p>
+    </div>
+  </section>
+  <aside>
+    <h3>
+      Aside
+    </h3>
+    <div class="div-2">
+      <p>
+        Finally applying coding knowledge to exciting and fun projects was my biggest goal this semester. I felt that as a graduating senior,
+        I should have work that I am proud of to show off. Making this website, sharing my interests with others and connecting through shared
+        interests made me feel a lot more confident in my skillset and gave me ambition to continue growing.
+      </p>
+    </div>
+  </aside>
+  <section>
+    <h3>
+      Personal Growth
+    </h3>
+    <div class="div-2">
+      <p>
+        Finally applying coding knowledge to exciting and fun projects was my biggest goal this semester. I felt that as a graduating senior,
+        I should have work that I am proud of to show off. Making this website, sharing my interests with others and connecting through shared
+        interests made me feel a lot more confident in my skillset and gave me ambition to continue growing.
+      </p>
+    </div>
+  </section>
+  
 </html>
