--- a/main.html
+++ b/main.html
@@ -26,13 +26,13 @@
   </head>
   <section>
     <h3>
-      Experiences & Contributions
+      Overview
     </h3>
     <div class="div-2">
       <p>
-        This was my first semester with COSI and unfortuantely my last, being a senior. I contributed by attending every meeting, 
-        doing lightning talks on Neocities, [insert others...], helping with the game preservation/emulation station, and assisting 
-        in the documenting of COSIs library and magazines.
+        This was my first semester with COSI (and unfortuantely my last, since I'm graduating). I contributed by attending every meeting, 
+        doing lightning talk on Neocities, [insert others...], and helping with the game preservation/emulation station. I also learned a bunch
+        of HTML and CSS through making this website.
       </p>
     </div>
   </section>
@@ -50,13 +50,16 @@
   </aside>
   <section>
     <h3>
-      Personal Growth
+      Personal Learning
     </h3>
     <div class="div-2">
       <p>
-        Finally applying coding knowledge to exciting and fun projects was my biggest goal this semester. I felt that as a graduating senior,
-        I should have work that I am proud of to show off. Making this website, sharing my interests with others and connecting through shared
-        interests made me feel a lot more confident in my skillset and gave me ambition to continue growing.
+        <ul>
+          <li>I explored and took inspiration from various Neocities, then learned how to recreate some of my favorite aspects in HTML and CSS.</li>
+          <li>I brought a couple Raspberry Pis into COSI and learned about how to use them.</li>
+          <li>I brought my modded Wii in and learned about modding consoles and emulating games from the game preservation station.</li>
+        </ul>
+        
       </p>
     </div>
   </section>
