--- a/main.html
+++ b/main.html
@@ -31,20 +31,18 @@
     <div class="div-2">
       <p>
         This was my first semester with COSI (and unfortuantely my last, since I'm graduating). I contributed by attending every meeting, 
-        doing lightning talk on Neocities, [insert others...], and helping with the game preservation/emulation station. I also learned a bunch
+        doing lightning talk on Neocities, and helping with the game preservation/emulation station. I also learned a bunch
         of HTML and CSS through making this website.
       </p>
     </div>
   </section>
   <aside>
     <h3>
-      Aside
+      Hanging Out
     </h3>
     <div class="div-2">
       <p>
-        Finally applying coding knowledge to exciting and fun projects was my biggest goal this semester. I felt that as a graduating senior,
-        I should have work that I am proud of to show off. Making this website, sharing my interests with others and connecting through shared
-        interests made me feel a lot more confident in my skillset and gave me ambition to continue growing.
+        I brought my modded Wii in for people to play with and shared modding experiences with other people with the game preservation team.
       </p>
     </div>
   </aside>
@@ -54,11 +52,9 @@
     </h3>
     <div class="div-2">
       <p>
-        <ul>
-          <li>I explored and took inspiration from various Neocities, then learned how to recreate some of my favorite aspects in HTML and CSS.</li>
-          <li>I brought a couple Raspberry Pis into COSI and learned about how to use them.</li>
-          <li>I brought my modded Wii in and learned about modding consoles and emulating games from the game preservation station.</li>
-        </ul>
+          I explored and took inspiration from various Neocities, then learned how to recreate some of my favorite aspects in HTML and CSS. <br>
+          I brought a couple Raspberry Pis into COSI and learned about how to use them, along with an Arduino Uno. <br>
+          I learned how to install linux onto computers and create boot drives. Put Mint Xfce on a PC for someone.<br>
         
       </p>
     </div>
