End of Semester Update + Webring

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Amanda Polarolo ~ MP451 ~ Spring 2025</title>
     <div class="stampsleft">
-      <img src="\stamps\stamp1.png">
-      <img src="\stamps\stamp2.gif">
-      <img src="\stamps\stamp3.gif">
+      <img src="stamps\stamp1.png">
+      <img src="stamps\stamp2.gif">
+      <img src="stamps\stamp3.gif">
     </div>
     <div class="stampsright">
-      <img src="\stamps\stamp4.png">
-      <img src="\stamps\stamp5.png">
-      <img src="\stamps\stamp6.gif">
+      <img src="stamps\stamp4.png">
+      <img src="stamps\stamp5.png">
+      <img src="stamps\stamp6.gif">
     </div>
     
     <div>
@@ -66,6 +66,7 @@
           - Performed a battery replacement on laptop for my brother. <br>
           - Put Linux on my older laptop, effectively fixing it since Windows sucks &#128541; <br>
           - Fixed a hard drive for my mom containing family pictures from a long time ago <br>
+          - Did Miku's makup tonight<br>
       </p>
     </div>
   </section>
@@ -86,4 +87,20 @@
     </div>
   </aside>
 </body>
+<footer>
+  <section>
+    <h3>MP* Webring</h3>
+    <div class="div-2">
+    <p style="text-align: center;">
+    <a href="http://web2.clarkson.edu/projects/cosi/sp2025/students/mentism">A. R.</a>
+
+    <a href="https://lin-web.clarkson.edu/projects/cosi/sp2025/">Home/The Core</a>
+
+    <a href="http://web2.clarkson.edu/projects/cosi/sp2025/students/matthekf">K. Matt</a>
+  </p>
+  </div>
+  </section>
+    
+  </footer>
+
 </html>
